test/Fail/Issue7530.err
Issue7530.agda:19.9-13: error: [UnequalTerms]
The terms
  fst p
and
  snd p
are not equal at type A
when checking that the expression refl has type
_≡_ {Agda.Primitive.lzero} {A} (fst p) (snd p)
